<resources>
    <string name="app_name">AppBolsa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Investidor Total</string>
    <string name="nav_header_subtitle">Dúvidas: cstvanato@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    // Title
    <string name="title">Ação</string>

    //Menu
    <string name="menu_title_detalhar">Detalhar Eventos</string>
    <string name="menu_title_delete">Excluir</string>
    <string name="menu_title_delete_card">Excluir Card (Feature)</string>

    //Main
    <string name="title_events_list">Listar Eventos</string>

    // Actions (Ações)
    <string name="action_brockerage_note">Nota de correntagem</string>
    <string name="action_code">Código da Ação</string>
    <string name="action_date_buy">Data (dd/mm/aaaa)</string>
    <string name="action_quantity_purchased">Quantidade comprada</string>
    <string name="action_price_per_shere">Valor por ação</string>
    <string name="action_proportional_rates">Taxas e custos proporcionalizadas</string>
    <string name="operation_value">Valor da operação</string>
    <string name="action_average_value_share">Valor por ação</string>

    // Average Activity
    <string name="avg_title">Incluir Média</string>
    <string name="action_amount_stock">Quantidade</string>
    <string name="action_average_value">Valor Médio</string>


    // Erros
    <string name="error_field_required">Campo obrigatório</string>

    // Portfólio
    <string name="text_no_exist_portfolio">Ainda não tem portfólio,\nfaça um lançamento de compra, venda\nou varlor médio.</string>
    <string name="text_portfolio">Carteira</string>

    // Buy/Sell/OperationsActivity(bso)
    <string name="bso_subtitle">Compra/Venda</string>
    <string name="bso_msn_delete_more_stock">Confirma "Exclusão"?\nCuidado também serão excluídos todos os registros de %s, incluídos posteriormente a esse.</string>

    // BuyActivity
    <string name="buy_subtitle">Compra</string>

    // SellActivity
    <string name="sell_subtitle">Venda</string>

</resources>
